# futurex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: default.toml  testnet.toml
data/: schema.sql
docs/: GRANT_FORM_ANSWERS_CN.md  MI_TOKEN_GRANT_APPLICATION.md  PROJECT_EVIDENCE.md  SECURITY.md
scripts/: check_status.py  dashboard.py  download_historical_data.py  forensic_final_v2.py  live_trader.py  monitor.py  regime_analysis.py  run_backtest_full.py  walkforward_analysis.py
src/futurex/: __main__.py  app.py
src/futurex/backtest/: __init__.py  engine.py  matcher.py  performance.py
src/futurex/core/: config.py  constants.py  events.py  logging.py
src/futurex/data/: kline_aggregator.py  orderbook.py  rest_client.py  stream_router.py  user_stream.py  ws_manager.py
src/futurex/execution/: fill_tracker.py  order_manager.py
src/futurex/indicators/: engine.py  registry.py
src/futurex/notify/: telegram.py
src/futurex/regime/: __init__.py  detector.py  kill_switch.py  states.py
src/futurex/risk/: __init__.py  correlation.py  daily_limits.py  drawdown.py  exposure.py  gate.py  position_sizer.py  stop_manager.py
src/futurex/state/: __init__.py  persistence.py
src/futurex/storage/: duckdb_store.py
src/futurex/strategy/: ai_filter.py  base.py  signal_scorer.py
tests/test_risk/: test_drawdown.py  test_gate.py  test_position_sizer.py
tests/test_strategy/: test_ai_filter.py  test_signal_scorer.py
