[project]
name = "futurex"
version = "0.1.0"
description = "Binance USDT-M futures automated trading system"
requires-python = ">=3.12"

dependencies = [
    "binance-futures-connector>=4.0",
    "websockets>=12.0",
    "pandas>=2.1",
    "pandas_ta>=0.3.14b",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "anthropic>=0.39",
    "redis[hiredis]>=5.0",
    "duckdb>=0.9",
    "structlog>=23.2",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "ccxt>=4.5.51",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
backtest = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
